# Nosved-Player

./: .gitignore  AGENTS.md  LICENSE  README.md  build.gradle.kts  build_output.txt  error.txt  gradle.properties  gradlew  gradlew.bat  index.html  settings.gradle.kts  update_details.md
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
app/: build.gradle.kts  proguard-rules.pro
app/libs/: Donwlod-Mpvlibs.md  lib-decoder-ffmpeg-release.txt
app/src/androidTest/java/com/devson/androidTemplate/: ExampleInstrumentedTest.kt
app/src/androidTest/java/com/devson/nosvedplayer/: ExampleInstrumentedTest.kt
app/src/androidTest/java/com/devson/picone/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt
app/src/main/java/com/devson/nosvedplayer/: AppLogger.kt  MainActivity.kt  NosvedApplication.kt
app/src/main/java/com/devson/nosvedplayer/data/: CachedVideoMetadata.kt  NosvedDatabase.kt  VideoMetadataDao.kt  WatchHistoryDao.kt
app/src/main/java/com/devson/nvplayer/: MainActivity.kt  NosvedApplication.kt
app/src/main/java/com/devson/picone/: MainActivity.kt
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-mr/: strings.xml
app/src/main/res/xml/: locales_config.xml  shortcuts.xml
app/src/test/java/com/devson/nosvedplayer/: ExampleUnitTest.kt
app/src/test/java/com/devson/picone/: ExampleUnitTest.kt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
(+377 files in other folders)
